lab1/Test/L1-A-11-13.cmm
int szebH48UiT ( ) {
  struct ME_wzFjPnJ9_5CdyVgtN R1cz0uyLk , udcpVfbqiI9pBWM7 
    [ 2016246762 ] = ;
[   if ( vscdSizg71xYs3rI3s )   if ( mMIK )   return 
    Vdz40tYArfFXWlgX ;
else   f_ || LlkdqQKeZN_78iJ - HfW37b * ! cikKqd0NaCsM 
    [ ge6N = G = vGz = qjZm1 && MU_xHcwn == DMQmou + _firW 
    / - fRfxu01EM ( Wp_d6g0 = lpSz8n <= ( Y1WQEX7Ol6g6Kjv1nbz 
    = gmUO8NQlXanVYm2q5KKl || YLAVgaP_o > CnTOjsFp_ / 
    Y ( frTsWx12fgF , K3Nfz5Z = QbWIJeLt1K5Zpi6u_ || SVBmxd9fZNFvBL4yW9u5 
    < wS [ Z [ yN8g3_IF58TjV4Efls || qdW == ! ! ! ! 377211815.38181207 
    ] = SH0HZUhNDBbqQQm ] ) != 1594086505 >= ! iB1886j4kifCBUQGqx4v 
    ( ) ) ) ] ZNQnRI73oh1S ;


}
int ;
struct wfw08PZ51 ;
int ;
struct W {
  int 71517656 sy_Non8h2Ri5Vk6A ;
  int V2kvz2uw ;
};
float v > 
;
int nfsCEJ , MxU8V 

;
struct h7jum_wP0vaN1bA4A ;
int ;
struct EHPxgv ;
struct o ;
int ;
int ;
struct {
  int sc ;
};
int O_S int Vxdo0307j3s_myeHW0 ) {
  while ( QqfvTuipxyWS8IJV0 ) {
    if ( UbjMf6S7pk )     egaLMs2PAM11YwXx ;
else     if ( yk3L )     UIDyVBjGn2mpN ;


  }
}
int vIL ( ) }
int qaTq1lxdE_yr ( {
}
int ;
int ;
int AYqlqQIz9aN ( ) {
}
int UrTBTPw5 ( int fXiiXWg0SFX_CDWjq , int _3n ) {
}
